@@ -2,49 +2,58 @@ package stryker4s
 
 import java.nio.file.Paths
 
-import org.mockito.ArgumentMatchersSugar
-import org.mockito.Mockito._
-import org.scalatest.mockito.MockitoSugar
-import stryker4s.config.Config
+import org.mockito.captor.ArgCaptor
+import org.mockito.{ArgumentMatchersSugar, MockitoSugar}
+import org.scalatest.Inside
+import stryker4s.config.{Config, ConsoleReporterType, HtmlReporterType}
 import stryker4s.model.{Killed, Mutant, MutantRunResults}
 import stryker4s.mutants.Mutator
 import stryker4s.mutants.applymutants.{ActiveMutationContext, MatchBuilder, StatementTransformer}
 import stryker4s.mutants.findmutants.{FileCollector, MutantFinder, MutantMatcher}
+import stryker4s.report.Reporter
 import stryker4s.run.process.{Command, ProcessMutantRunner}
-import stryker4s.report.{ConsoleReporter, HtmlReporter, Reporter}
 import stryker4s.run.threshold.SuccessStatus
 import stryker4s.scalatest.{FileUtil, LogMatchers}
 import stryker4s.testutil.Stryker4sSuite
-import stryker4s.testutil.stubs._
+import stryker4s.testutil.stubs.{TestProcessRunner, TestSourceCollector}
 
 import scala.util.Success
 
-class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatchersSugar with LogMatchers {
+class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatchersSugar with Inside with LogMatchers {
 
   describe("run") {
     val file = FileUtil.getResource("scalaFiles/simpleFile.scala")
     val testFiles = Seq(file)
     val testSourceCollector = new TestSourceCollector(testFiles)
     val testProcessRunner = TestProcessRunner(Success(1), Success(1), Success(1), Success(1))
+    val reporterMock = mock[Reporter]
 
     it("should call mutate files and report the results") {
       implicit val conf: Config = Config(baseDir = FileUtil.getResource("scalaFiles"))
-      val testMutantRunner =
-        new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, new FileCollector(testProcessRunner))
-      val testReporter = new TestReporter
+
+      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"),
+                                                     testProcessRunner,
+                                                     new FileCollector(testProcessRunner),
+                                                     reporterMock)
 
       val sut = new Stryker4s(
         testSourceCollector,
         new Mutator(new MutantFinder(new MutantMatcher),
                     new StatementTransformer,
                     new MatchBuilder(ActiveMutationContext.sysProps)),
-        testMutantRunner,
-        testReporter
+        testMutantRunner
       )
 
       val result = sut.run()
 
-      val reportedResults = testReporter.testMutantReporter.lastCall.value.results
+      val startCaptor = ArgCaptor[Mutant]
+      verify(reporterMock, times(4)).reportMutationStart(startCaptor)
+      startCaptor.values should matchPattern {
+        case List(Mutant(0, _, _, _), Mutant(1, _, _, _), Mutant(2, _, _, _), Mutant(3, _, _, _)) =>
+      }
+      val runResultCaptor = ArgCaptor[MutantRunResults]
+      verify(reporterMock).reportRunFinished(runResultCaptor)
+      val reportedResults = runResultCaptor.value.results
 
       val expectedPath = Paths.get("simpleFile.scala")
 
@@ -57,34 +66,10 @@ class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatche
       }
     }
 
-    it("should call multiple reporters when more then one is specified") {
-      val consoleReporterMock: ConsoleReporter = mock[ConsoleReporter]
-      val htmlReporterMock: HtmlReporter = mock[HtmlReporter]
-
-      implicit val conf: Config = Config(reporters = List(consoleReporterMock, htmlReporterMock))
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
-
-      val sut = new Stryker4s(
-        testSourceCollector,
-        new Mutator(new MutantFinder(new MutantMatcher),
-                    new StatementTransformer,
-                    new MatchBuilder(ActiveMutationContext.sysProps)),
-        testMutantRunner,
-        new Reporter
-      )
-
-      sut.run()
-
-      verify(consoleReporterMock).report(any[MutantRunResults])(any[Config])
-      verify(htmlReporterMock).report(any[MutantRunResults])(any[Config])
-    }
-
     it("should log a warning when JVM max memory is too low") {
       implicit val conf: Config = Config()
-      val testSourceCollector = new TestSourceCollector(Seq())
-      val testProcessRunner = TestProcessRunner()
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
-      val testReporter = new TestReporter
+      val testMutantRunner =
+        new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector, reporterMock)
 
       val sut: Stryker4s =
         new Stryker4s(
@@ -92,8 +77,7 @@ class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatche
           new Mutator(new MutantFinder(new MutantMatcher),
                       new StatementTransformer,
                       new MatchBuilder(ActiveMutationContext.sysProps)),
-          testMutantRunner,
-          testReporter
+          testMutantRunner
         ) {
 
           override def jvmMemory2GBOrHigher: Boolean = false
@@ -101,17 +85,14 @@ class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatche
 
       sut.run()
 
-      "The JVM has less than 2GB memory available. We advise increasing this to 4GB when running Stryker4s." shouldBe loggedAsWarning
-      "This can be done in sbt by setting an environment variable: SBT_OPTS=\"-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4G -Xmx4G\" " shouldBe loggedAsWarning
-      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info." shouldBe loggedAsWarning
+      "The JVM has less than 2GB memory available. We advise to allocate 4GB memory when running Stryker4s." shouldBe loggedAsWarning
+      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info on how to allocate more memory to the JVM." shouldBe loggedAsWarning
     }
 
     it("should not log a warning when JVM max memory is high enough") {
       implicit val conf: Config = Config()
-      val testSourceCollector = new TestSourceCollector(Seq())
-      val testProcessRunner = TestProcessRunner()
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
-      val testReporter = new TestReporter
+      val testMutantRunner =
+        new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector, reporterMock)
 
       val sut: Stryker4s =
         new Stryker4s(
@@ -119,8 +100,7 @@ class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatche
           new Mutator(new MutantFinder(new MutantMatcher),
                       new StatementTransformer,
                       new MatchBuilder(ActiveMutationContext.sysProps)),
-          testMutantRunner,
-          testReporter
+          testMutantRunner
         ) {
 
           override def jvmMemory2GBOrHigher: Boolean = true
@@ -128,9 +108,8 @@ class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatche
 
       sut.run()
 
-      "The JVM has less than 2GB memory available. We advise increasing this to 4GB when running Stryker4s." should not be loggedAsWarning
-      "This can be done in sbt by setting an environment variable: SBT_OPTS=\"-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4G -Xmx4G\" " should not be loggedAsWarning
-      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info." should not be loggedAsWarning
+      "The JVM has less than 2GB memory available. We advise to allocate 4GB memory when running Stryker4s." should not be loggedAsWarning
+      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info on how to allocate more memory to the JVM." should not be loggedAsWarning
     }
   }
 }
